Added a session counter and fixed hyperlink in book_detail

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -15,4 +15,8 @@
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     <li><strong>Wimpy Kid Books:</strong> {{ num_wimpy }}</li>
   </ul>
+
+  <p>
+    You have visited this page {{ num_visits }} time{{num_visits|pluralize}}!
+  </p>
 {% endblock %}
