Fixed bugs with create, update, and delete book

--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -38,7 +38,7 @@
       <li><a href="{% url 'book-update' book.id %}">Update Book</a></li>
     {% endif %}
     {% if not book.bookinstance_set.all and perms.catalog.delete_book %}
-      <li><a href="{% url 'author-book' book.id %}">Delete Book</a></li>
+      <li><a href="{% url 'book-delete' book.id %}">Delete Book</a></li>
     {% endif %}
     </ul>
   {% endif %}
