--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -3,11 +3,10 @@
 {% block content %}
   <h1>The Best Library Known to Man</h1>
   <p>
-    Welcome to LocalLibrary, a website developed by
-    <em>Mozilla Developer Network</em>!
+    Welcome to <strong>The Best Library Known to Man</strong>, a website developed by
+    <em>Mozilla Developer Network and Jon Zemlicka</em>!
   </p>
-  <h2>Dynamic content</h2>
-  <p>The library has the following record counts:</p>
+  <h2 style="margin-top: 30px">Library Contents</h2>
   <ul>
     <li><strong>Books:</strong> {{ num_books }}</li>
     <li><strong>Copies:</strong> {{ num_instances }}</li>
@@ -15,7 +14,7 @@
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     <li><strong>Wimpy Kid Books:</strong> {{ num_wimpy }}</li>
   </ul>
-
+  <h2 style="margin-top: 40px">Visit Tracker</h2>
   <p>
     You have visited this page {{ num_visits }} time{{num_visits|pluralize}}!
   </p>
