--- a/catalog/templates/catalog/author_form.html
+++ b/catalog/templates/catalog/author_form.html
@@ -1,6 +1,8 @@
 {% extends "base_generic.html" %}
 
+
 {% block content %}
+<h1>Create New Author</h1>
 <form action="" method="post">
   {% csrf_token %}
   <table>
