--- a/catalog/templates/catalog/book_form.html
+++ b/catalog/templates/catalog/book_form.html
@@ -1,6 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+<h1>Create New Book</h1>
 <form action="" method="post">
   {% csrf_token %}
   <table>
